// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-authenticator spec: Render logic -> should render a \`forgot password\` if initialAuthState is \`forgotpassword\` 1`] = `
<amplify-authenticator initial-auth-state="forgotpassword">
  <mock:shadow-root>
    <div class="auth-container">
      <slot name="forgot-password">
        <amplify-forgot-password></amplify-forgot-password>
      </slot>
    </div>
  </mock:shadow-root>
</amplify-authenticator>
`;

exports[`amplify-authenticator spec: Render logic -> should render a \`sign in\` by default 1`] = `
<amplify-authenticator>
  <mock:shadow-root>
    <div class="auth-container">
      <slot name="sign-in">
        <amplify-sign-in></amplify-sign-in>
      </slot>
    </div>
  </mock:shadow-root>
</amplify-authenticator>
`;

exports[`amplify-authenticator spec: Render logic -> should render a \`sign up\` if initialAuthState is \`signup\` 1`] = `
<amplify-authenticator initial-auth-state="signup">
  <mock:shadow-root>
    <div class="auth-container">
      <slot name="sign-up">
        <amplify-sign-up></amplify-sign-up>
      </slot>
    </div>
  </mock:shadow-root>
</amplify-authenticator>
`;
